# OpenCV-Clang-Windows

./: .gitignore  CMakeLists.txt  README.md  clang-x86_64_windows_gnu.cmake  main.cpp
